chore: Proper test virtual thread dispatcher and update doc. (#1728)